# path_cfg_manager

./: .gitignore  LICENSE  README.md  build_upload.md  build_upload.sh  pyproject.toml
src/path_cfg_manager/: __init__.py  project_path.py
tests/: test_project_path.py
